Fix gallery image distortion on safari

--- a/assets/styles/components/content/_gallery.scss
+++ b/assets/styles/components/content/_gallery.scss
@@ -11,7 +11,6 @@
 
   img {
     display: block;
-    width: 100%;
     height: 300px;
   }
 
